exports[`RefinementList applies translations 1`] = `
<div
  className="ais-RefinementList__root">
  <div
    className="ais-RefinementList__items">
    <div
      className="ais-RefinementList__item">
      <label>
        <input
          checked={false}
          className="ais-RefinementList__itemCheckbox"
          onChange={[Function]}
          type="checkbox" />
        <span
          className="ais-RefinementList__itemBox ais-RefinementList__itemBox" />
        <span
          className="ais-RefinementList__itemLabel ais-RefinementList__itemLabel">
          white
        </span>
         
        <span
          className="ais-RefinementList__itemCount">
          10
        </span>
      </label>
    </div>
    <div
      className="ais-RefinementList__item">
      <label>
        <input
          checked={false}
          className="ais-RefinementList__itemCheckbox"
          onChange={[Function]}
          type="checkbox" />
        <span
          className="ais-RefinementList__itemBox ais-RefinementList__itemBox" />
        <span
          className="ais-RefinementList__itemLabel ais-RefinementList__itemLabel">
          black
        </span>
         
        <span
          className="ais-RefinementList__itemCount">
          20
        </span>
      </label>
    </div>
    <div
      className="ais-RefinementList__item">
      <label>
        <input
          checked={false}
          className="ais-RefinementList__itemCheckbox"
          onChange={[Function]}
          type="checkbox" />
        <span
          className="ais-RefinementList__itemBox ais-RefinementList__itemBox" />
        <span
          className="ais-RefinementList__itemLabel ais-RefinementList__itemLabel">
          blue
        </span>
         
        <span
          className="ais-RefinementList__itemCount">
          30
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RefinementList default refinement list 1`] = `
<div
  className="ais-RefinementList__root">
  <div
    className="ais-RefinementList__items">
    <div
      className="ais-RefinementList__item ais-RefinementList__itemSelected">
      <label>
        <input
          checked={true}
          className="ais-RefinementList__itemCheckbox ais-RefinementList__itemCheckboxSelected"
          onChange={[Function]}
          type="checkbox" />
        <span
          className="ais-RefinementList__itemBox ais-RefinementList__itemBox ais-RefinementList__itemBoxSelected" />
        <span
          className="ais-RefinementList__itemLabel ais-RefinementList__itemLabel ais-RefinementList__itemLabelSelected">
          white
        </span>
         
        <span
          className="ais-RefinementList__itemCount ais-RefinementList__itemCountSelected">
          10
        </span>
      </label>
    </div>
    <div
      className="ais-RefinementList__item">
      <label>
        <input
          checked={false}
          className="ais-RefinementList__itemCheckbox"
          onChange={[Function]}
          type="checkbox" />
        <span
          className="ais-RefinementList__itemBox ais-RefinementList__itemBox" />
        <span
          className="ais-RefinementList__itemLabel ais-RefinementList__itemLabel">
          black
        </span>
         
        <span
          className="ais-RefinementList__itemCount">
          20
        </span>
      </label>
    </div>
  </div>
  <button
    className="ais-RefinementList__showMore"
    disabled={false}
    onClick={[Function]}>
    Show more
  </button>
</div>
`;
